STREAMPIPES-58: Compute correct widget size for dashboard widgets

--- a/ui/src/app/dashboard-v2/components/grid/dashboard-grid.component.html
+++ b/ui/src/app/dashboard-v2/components/grid/dashboard-grid.component.html
@@ -3,10 +3,10 @@
     <h3>{{dashboard.description}}</h3>
 </div>
 <gridster [options]="options" [ngClass]="editMode ? 'edit' : ''">
-    <ng-container *ngFor="let item of dashboard.widgets">
-        <gridster-item [item]="item">
+    <ng-container *ngFor="let item of dashboard.widgets;let i=index">
+        <gridster-item [item]="item" #gridsterItemComponent>
             <dashboard-widget (deleteCallback)="removeItem($event)" [item]="item" [widget]="item"
-            [editMode]="editMode"></dashboard-widget>
+            [editMode]="editMode" [gridsterItemComponent]="gridsterItemComponent"></dashboard-widget>
         </gridster-item>
     </ng-container>
 </gridster>
