--- a/ui/src/app/dashboard-v2/components/widget/dashboard-widget.component.css
+++ b/ui/src/app/dashboard-v2/components/widget/dashboard-widget.component.css
@@ -2,8 +2,16 @@
     height:100%;
 }
 
+.h-40 {
+    height:40px;
+}
+
 .p-0 {
     padding:0;
+}
+
+.p-20 {
+    padding: 20px;
 }
 
 .m-0 {
@@ -24,3 +32,8 @@
 .box .row.header {
     flex: 0 1 auto;
 }
+
+/*::ng-deep .ngx-charts {*/
+/*    margin-left:0px;*/
+/*    margin-top:20px;*/
+/*}*/
