--- a/ui/src/app/dashboard-v2/components/widgets/gauge/gauge-widget.component.html
+++ b/ui/src/app/dashboard-v2/components/widgets/gauge/gauge-widget.component.html
@@ -1,10 +1,15 @@
-<ngx-charts-gauge
-        [view]="view"
-        [results]="data"
-        [min]="min"
-        [max]="max"
-        [angleSpan]="240"
-        [startAngle]="-120"
-        [bigSegments]="10"
-        [smallSegments]="5">
-</ngx-charts-gauge>
+<div fxFlex="100" fxLayoutAlign="center center" fxLayout="column" class="main-panel"
+     [ngStyle]="{'background-color': selectedBackgroundColor, 'color': selectedPrimaryTextColor}">
+    <ngx-charts-gauge
+            [view]="view"
+            [scheme]="colorScheme"
+            [results]="data"
+            [min]="min"
+            [max]="max"
+            [angleSpan]="240"
+            [startAngle]="-120"
+            [bigSegments]="10"
+            [smallSegments]="5"
+            [ngStyle]="{'fill': selectedPrimaryTextColor}" *ngIf="displayChart">
+    </ngx-charts-gauge>
+</div>
