STREAMPIPES-58: Add title field to widgets

--- a/ui/src/app/dashboard-v2/components/widgets/gauge/gauge-widget.component.css
+++ b/ui/src/app/dashboard-v2/components/widgets/gauge/gauge-widget.component.css
@@ -5,7 +5,10 @@
     align-content: center;
 }
 
-/*::ng-deep .ngx-charts {*/
-/*    margin-left:0px;*/
-/*    margin-top:20px;*/
-/*}*/
+.mt-20 {
+    margin-top:20px;
+}
+
+.title-panel {
+    font-size:20px;
+}
