--- a/ui/src/app/dashboard-v2/components/widgets/gauge/gauge-widget.component.html
+++ b/ui/src/app/dashboard-v2/components/widgets/gauge/gauge-widget.component.html
@@ -1,5 +1,8 @@
 <div fxFlex="100" fxLayoutAlign="center center" fxLayout="column" class="main-panel"
      [ngStyle]="{'background-color': selectedBackgroundColor, 'color': selectedPrimaryTextColor}">
+    <div class="title-panel mt-20" *ngIf="hasTitlePanelSettings">
+        {{selectedTitle}}
+    </div>
     <ngx-charts-gauge
             [view]="view"
             [scheme]="colorScheme"
