--- a/ui/src/app/dashboard-v2/components/widgets/line/line-widget.component.css
+++ b/ui/src/app/dashboard-v2/components/widgets/line/line-widget.component.css
@@ -4,3 +4,11 @@
     display:inline-grid;
     align-content: center;
 }
+
+.mt-20 {
+    margin-top:20px;
+}
+
+.title-panel {
+    font-size:20px;
+}
