--- a/ui/src/app/data-explorer/explorer/explorer.component.html
+++ b/ui/src/app/data-explorer/explorer/explorer.component.html
@@ -31,7 +31,7 @@
                     </mat-autocomplete>
                 </mat-form-field>
             </div>
-            <div fxLayout="column" style="margin-top: 10px; margin-left: 5px" *ngIf="selectedInfoResult !== Undefined">
+            <div fxLayout="column" style="margin-top: 10px; margin-left: 5px" *ngIf="selectedInfoResult !== undefined">
                 <div fxLayout="row" fxLayoutAlign="start stretch">
                     <mat-form-field style="margin-right: 1px;top: -3px;height: 1px; width: 100px" appearance="outline"
                         *ngIf="dimensionProperties.length > 0">
