--- a/ui/src/app/pipelines/dialog/pipeline-status-dialog.tmpl.html
+++ b/ui/src/app/pipelines/dialog/pipeline-status-dialog.tmpl.html
@@ -56,7 +56,7 @@
                                     <b>More Details:</b>
                                     <div class="md-padding">
                                         <pre class="language" nag-prism source="{{msg.optionalMessage}}"
-                                             style="margin-top:0px;border-radius:0px;"></pre>
+                                             style="margin-top:0px;border-radius:0px;max-width:100%;"></pre>
                                     </div>
                                 </div>
                             </div>
