STREAMPIPES-58: Dashboard settings can be updated

--- a/ui/src/app/dashboard-v2/components/panel/dashboard-panel.component.html
+++ b/ui/src/app/dashboard-v2/components/panel/dashboard-panel.component.html
@@ -29,6 +29,7 @@
     </div>
 
     <dashboard-grid [editMode]="editMode" [dashboard]="dashboard"
+                    (updateCallback)="updateAndQueueItemForDeletion($event)"
                     (deleteCallback)="removeAndQueueItemForDeletion($event)"
                     class="h-100"></dashboard-grid>
 </div>
