STREAMPIPES-58: Add presets to color picker

--- a/ui/src/app/connect/static-properties/static-mapping-unary/static-mapping-unary.component.html
+++ b/ui/src/app/connect/static-properties/static-mapping-unary/static-mapping-unary.component.html
@@ -16,7 +16,7 @@
   ~
   -->
 
-<div id="formWrapper" fxFlex="100" fxLayout="column">
+<div id="formWrapper">
     <div fxFlex="100">
         <p>{{staticProperty.label}}: <br>
             <mat-hint class="description">{{staticProperty.description}}</mat-hint>
