--- a/ui/src/app/connect/static-properties/static-color-picker/static-color-picker.component.html
+++ b/ui/src/app/connect/static-properties/static-color-picker/static-color-picker.component.html
@@ -15,16 +15,22 @@
   ~ limitations under the License.
   ~
   -->
-Color
 <div id="formWrapper">
+    <div fxFlex="100">
+        <p>{{staticProperty.label}}: <br>
+            <mat-hint class="description">{{staticProperty.description}}</mat-hint>
+        </p>
+    </div>
+    <div fxFlex="100" fxLayout="row">
     <form [formGroup]="colorPickerForm">
         <mat-form-field>
             <input matInput id="{{ 'input-' + staticProperty.label.toLowerCase() }}"
                    [(colorPicker)]="staticPropertyUtil.asColorPickerStaticProperty(staticProperty).selectedColor"
                    formControlName="colorPickerStaticProperty"
                    [style.background]="staticPropertyUtil.asColorPickerStaticProperty(staticProperty).selectedColor" required
-                   (blur)="emitUpdate()"/>
+                   (blur)="emitUpdate()" [cpPresetColors] = "presetColors"/>
         </mat-form-field>
     </form>
+    </div>
 </div>
 
