STREAMPIPES-58: Modify configuration options of some dashboard widgets

--- a/ui/src/app/dashboard-v2/components/widgets/area/area-widget.component.css
+++ b/ui/src/app/dashboard-v2/components/widgets/area/area-widget.component.css
@@ -14,3 +14,11 @@
  *   See the License for the specific language governing permissions and
  *   limitations under the License.
  */
+
+.title-panel {
+    font-size:20px;
+}
+
+.mt-20 {
+    margin-top:20px;
+}
