--- a/ui/src/app/dashboard-v2/components/widgets/table/table-widget.component.css
+++ b/ui/src/app/dashboard-v2/components/widgets/table/table-widget.component.css
@@ -15,3 +15,12 @@
  * limitations under the License.
  *
  */
+
+.title-panel {
+    font-size:20px;
+    text-align:center;
+}
+
+.mt-20 {
+    margin-top:20px;
+}
