--- a/ui/src/app/dashboard-v2/components/widgets/table/table-widget.component.html
+++ b/ui/src/app/dashboard-v2/components/widgets/table/table-widget.component.html
@@ -16,14 +16,21 @@
   ~
   -->
 
-<table mat-table [dataSource]="dataSource" style="width:100%;">
+<div fxLayout="column" fxFlex="100" [ngStyle]="{'background-color': selectedBackgroundColor, 'color':
+selectedPrimaryTextColor}">
+    <div class="title-panel mt-20" *ngIf="hasTitlePanelSettings">
+        {{selectedTitle}}
+    </div>
+    <table fxFlex="100" mat-table [dataSource]="dataSource" [ngStyle]="{'background': selectedBackgroundColor}">
 
-    <ng-container *ngFor="let element of selectedProperties" [cdkColumnDef]="element">
-        <th mat-header-cell *matHeaderCellDef><label>{{element}}</label></th>
-        <td mat-cell *matCellDef="let row">{{row[element]}}</td>
-    </ng-container>
+        <ng-container *ngFor="let element of selectedProperties" [cdkColumnDef]="element">
+            <th mat-header-cell [ngStyle]="{'color': selectedPrimaryTextColor}"
+                *matHeaderCellDef><label>{{element}}</label></th>
+            <td mat-cell *matCellDef="let row" [ngStyle]="{'color': selectedPrimaryTextColor}">{{row[element]}}</td>
+        </ng-container>
 
-    <tr mat-header-row *matHeaderRowDef="selectedProperties; sticky: true"></tr>
-    <tr mat-row *matRowDef="let row; columns: selectedProperties;"></tr>
+        <tr mat-header-row *matHeaderRowDef="selectedProperties; sticky: true"></tr>
+        <tr mat-row *matRowDef="let row; columns: selectedProperties;"></tr>
 
-</table>
+    </table>
+</div>
