[STREAMPIPES-78] enable drag and drop

--- a/ui/src/app/core-ui/imageLabeler/imageLabeler.component.html
+++ b/ui/src/app/core-ui/imageLabeler/imageLabeler.component.html
@@ -23,7 +23,7 @@
 </mat-button-toggle-group>
 
 <canvas (mousedown)="imageMouseDown($event)" (mousemove)="imageMouseMove($event)" (mouseup)="imageMouseUp($event)"
-        #test style="border:2px solid;" width="800" height="500" ></canvas>
+        #canvas style="border:2px solid;" width="800" height="500" ></canvas>
 <!-- (scroll)="imageZoom($event)" -->
 
 
