--- a/ui/src/app/dashboard-v2/components/widget/dashboard-widget.component.html
+++ b/ui/src/app/dashboard-v2/components/widget/dashboard-widget.component.html
@@ -34,30 +34,35 @@
                 <div *ngIf="widget.widgetType === 'number'" class="h-100 p-0">
                     <number-widget [gridsterItemComponent]="gridsterItemComponent" [gridsterItem]="item"
                                    [widget]="widget" [editMode]="editMode"
-                                   [widgetConfig]="configuredWidget" class="h-100"></number-widget>
+                                   [widgetConfig]="configuredWidget" [widgetDataConfig]="widgetDataConfig" class="h-100"></number-widget>
                 </div>
                 <div *ngIf="widget.widgetType === 'line'" class="h-100 p-0">
                     <line-widget [gridsterItemComponent]="gridsterItemComponent" [editMode]="editMode"
-                                 [gridsterItem]="item" [widget]="widget" [widgetConfig]="configuredWidget" class="h-100"></line-widget>
+                                 [gridsterItem]="item" [widget]="widget" [widgetConfig]="configuredWidget"
+                                 [widgetDataConfig]="widgetDataConfig" class="h-100"></line-widget>
                 </div>
                 <div *ngIf="widget.widgetType === 'area'" class="h-100 p-0">
                     <area-widget [gridsterItemComponent]="gridsterItemComponent" [editMode]="editMode"
-                                 [gridsterItem]="item" [widget]="widget" [widgetConfig]="configuredWidget" class="h-100"></area-widget>
+                                 [gridsterItem]="item" [widget]="widget" [widgetConfig]="configuredWidget"
+                                 [widgetDataConfig]="widgetDataConfig" class="h-100"></area-widget>
                 </div>
                 <div *ngIf="widget.widgetType === 'table'" class="h-100 p-0">
                     <table-widget [gridsterItemComponent]="gridsterItemComponent"
                                   [gridsterItem]="item" [widget]="widget" [editMode]="editMode"
-                                  [widgetConfig]="configuredWidget" class="h-100"></table-widget>
+                                  [widgetConfig]="configuredWidget"
+                                  [widgetDataConfig]="widgetDataConfig" class="h-100"></table-widget>
                 </div>
                 <div *ngIf="widget.widgetType === 'gauge'" class="h-100 p-0">
                     <gauge-widget [gridsterItemComponent]="gridsterItemComponent"
                                   [gridsterItem]="item" [widget]="widget" [editMode]="editMode"
-                                  [widgetConfig]="configuredWidget" class="h-100"></gauge-widget>
+                                  [widgetConfig]="configuredWidget"
+                                  [widgetDataConfig]="widgetDataConfig" class="h-100"></gauge-widget>
                 </div>
                 <div *ngIf="widget.widgetType === 'image'" class="h-100 p-0">
                     <image-widget [gridsterItemComponent]="gridsterItemComponent"
                                   [gridsterItem]="item" [widget]="widget" [editMode]="editMode"
-                                  [widgetConfig]="configuredWidget" class="h-100"></image-widget>
+                                  [widgetConfig]="configuredWidget"
+                                  [widgetDataConfig]="widgetDataConfig" class="h-100"></image-widget>
                 </div>
             </div>
         </div>
