--- a/ui/src/app/data-explorer-v2/components/overview/data-explorer-dashboard-overview.component.html
+++ b/ui/src/app/data-explorer-v2/components/overview/data-explorer-dashboard-overview.component.html
@@ -16,16 +16,17 @@
   ~
   -->
 
+
 <div fxFlex="100" fxLayout="column" class="m-20">
     <div fxLayout="row wrap">
-        <button mat-button mat-raised-button color="primary" (click)="openNewDashboardDialog()">
-            New dashboard
+        <button mat-button mat-raised-button color="primary" (click)="openNewDataViewDialog()">
+            New Data View
         </button>
     </div>
     <div fxFlex="100" fxLayout="row wrap" fxLayoutAlign="start stretch">
         <div fxFlex="100" class="assemblyOptions sp-blue-bg" style="padding:5px;">
             <div fxLayout="row" fxLayoutAlign="start center" fxFlex="100">
-                <h4>My dashboards</h4>
+                <h4>My Data Views</h4>
                 <span flex></span>
             </div>
         </div>
