--- a/ui/src/app/data-explorer-v2/components/panel/data-explorer-dashboard-panel.component.html
+++ b/ui/src/app/data-explorer-v2/components/panel/data-explorer-dashboard-panel.component.html
@@ -28,8 +28,8 @@
             visualization</button>
     </div>
 
-    <dashboard-grid [editMode]="editMode" [dashboard]="dashboard"
+    <sp-data-explorer-dashboard-grid [editMode]="editMode" [dashboard]="dashboard"
                     (updateCallback)="updateAndQueueItemForDeletion($event)"
                     (deleteCallback)="removeAndQueueItemForDeletion($event)"
-                    class="h-100"></dashboard-grid>
+                    class="h-100"></sp-data-explorer-dashboard-grid>
 </div>
