--- a/ui/src/app/data-explorer-v2/data-explorer-v2.component.html
+++ b/ui/src/app/data-explorer-v2/data-explorer-v2.component.html
@@ -23,29 +23,29 @@
                 <div fxFlex fxLayoutAlign="start center">
                     <mat-tab-group [selectedIndex]="selectedIndex" (selectedIndexChange)="selectDashboard($event)">
                         <mat-tab label="Start"></mat-tab>
-                        <mat-tab *ngFor="let dashboard of dashboards" label="{{dashboard.name}}"></mat-tab>
+                        <mat-tab *ngFor="let dataViewDashboard of dataViewDashboards" label="{{dataViewDashboard.name}}"></mat-tab>
                     </mat-tab-group>
                 </div>
                 <div fxFlex fxLayoutAlign="end center" class="mr-20">
-                <button mat-button mat-icon-button color="primary"
-                        *ngIf="selectedIndex > 0" (click)="toggleEditMode()" [disabled]="editMode">
-                    <i class="material-icons">edit</i>
-                </button>
+                    <button mat-button mat-icon-button color="primary"
+                            *ngIf="selectedIndex > 0" (click)="toggleEditMode()" [disabled]="editMode">
+                        <i class="material-icons">edit</i>
+                    </button>
                 </div>
             </div>
         </div>
     </div>
 
     <div class="fixed-height page-container-padding-inner" fxLayout="column" fxFlex="100" *ngIf="dashboardsLoaded">
-    <dashboard-overview (selectDashboardEmitter)="openDashboard($event)"
-                        (reloadDashboardsEmitter)="getDashboards()"
-                        [dashboards]="dashboards"
-                        *ngIf="!dashboardTabSelected">
+        <sp-data-explorer-dashboard-overview (selectDashboardEmitter)="openDashboard($event)"
+                                      (reloadDashboardsEmitter)="getDashboards()"
+                                      [dataViewDashboards]="dataViewDashboards"
+                                      *ngIf="!dashboardTabSelected">
 
-    </dashboard-overview>
-    <dashboard-panel fxLayout="column" [(editMode)]="editMode" [dashboard]="selectedDashboard"
-                     style="height:100%;" *ngIf="dashboardTabSelected">
+        </sp-data-explorer-dashboard-overview>
+        <sp-data-explorer-dashboard-panel fxLayout="column" [(editMode)]="editMode" [dashboard]="selectedDataViewDashboard"
+                                   style="height:100%;" *ngIf="dashboardTabSelected">
 
-    </dashboard-panel>
+        </sp-data-explorer-dashboard-panel>
     </div>
 </div>
