--- a/ui/src/app/core-ui/imageLabeler/imageLabeler.component.html
+++ b/ui/src/app/core-ui/imageLabeler/imageLabeler.component.html
@@ -21,11 +21,32 @@
     <div  fxLayout="row" fxLayoutAlign="space-around start">
         <div fxLayout="column" fxLayoutAlign="space-around center">
             <h2>Labels</h2>
-            <button mat-raised-button color="accent" (click)="selectLabel('sign')">Sign</button>
-            <br />
-            <button mat-raised-button color="accent" (click)="selectLabel('car')">Car</button>
-            <!--  <button mat-raised-button color="accent"(click)="setInteractionModeTranslate()">
-            <mat-icon>zoom_out_map</mat-icon></button>-->
+            <div  class="labelCategorySelectContainer"
+                 style="padding-left: 5px; padding-right: 5px; border-radius: 50px; font-size: 20px;">
+                <mat-form-field style="margin-top: -15px; margin-bottom: -10px">
+                    <mat-select [(value)]="labelCategory">
+                        <mat-option style="background-color: #FFFFFF" *ngFor="let labelCategory of labelCategories" [value]="labelCategory">
+                            {{labelCategory}}
+                        </mat-option>
+                    </mat-select>
+                </mat-form-field>
+            </div>
+
+            <div>
+
+            </div>
+
+            <mat-list>
+                <mat-list-item *ngFor="let label of labels[labelCategory]"
+                               [style.background-color]="selectedLabel == label ? 'lightgrey' : 'white'"
+                               style="height: 30px; padding-top: 5px; padding-buttom: 5px; border-radius: 50px; margin-bottom: 5px"
+                               (click)="selectLabel(label)">
+                    <mat-icon matListIcon [style.color]="getColor(label)" style="margin-top: -8px;">color_lens</mat-icon>
+                    <h4 style="margin-top: -3px;"> {{label}} </h4>
+                </mat-list-item>
+            </mat-list>
+
+
         </div>
 
         <div fxLayout="column" fxLayoutAlign="space-around center">
@@ -40,7 +61,17 @@
             </div>
         </div>
         <div fxLayout="column" fxLayoutAlign="space-between center">
-            <h2>Selected</h2>
+            <h2>Annotations</h2>
+
+            <mat-list>
+                <mat-list-item *ngFor="let annotation of coco?.annotations" (mouseover)="enterAnnotation(annotation)" (mouseout)="leaveAnnotation(annotation)"
+                               style="height: 30px; padding-top: 5px; padding-buttom: 5px; border-radius: 50px; margin-bottom: 5px">
+                    <mat-icon matListIcon [style.color]="getColor(coco.getLabelById(annotation.category_id))" style="margin-top: -8px;">color_lens</mat-icon>
+                    <h4 style="margin-top: -3px;"> {{annotation.id}} - {{coco.getLabelById(annotation.category_id)}}</h4>
+                    <button mat-icon-button (click)="deleteAnnotation(annotation)" style="margin-top: -10px; margin-left: 10px"> <mat-icon>delete_forever</mat-icon></button>
+                </mat-list-item>
+            </mat-list>
+
         </div>
     </div>
 
